--- a/docs/metodas/medis.tex
+++ b/docs/metodas/medis.tex
@@ -8,7 +8,7 @@ Pavyzdinis sprendimų medis klasifikuojantis vektorių $X$ į klases $Y = (y_1, 
  \ktufigref{images/sprendimu_medis.png} paveiksle. Jį sudaro testų rinkinys $T$.
 
 Sprendimų medį sudarantys testai yra formuojami modelio apmokymo metu. Mokymui naudojamas duomenų
-rinkinys $H$ kurį sudaro mokymosi duomenys su jiems priskirtimos klasėmis. Medžio formavimo metu
+rinkinys $H$ kurį sudaro mokymosi duomenys su jiems priskirtomis klasėmis. Medžio formavimo metu
 parenkami testai kurie maksimizuoja funkciją:
 \begin{equation} \label{eq:gainratio}
     santykinisIšlošis(t_i) = \frac{išlošis(t_i)}{santykinėEntropija(t_i)}
