--- a/docs/metodas/mokymas.tex
+++ b/docs/metodas/mokymas.tex
@@ -9,7 +9,7 @@ Modeliams mokyti naudojamas duomenų rinkinys yra dalinamas į tris imtis:
     \item testavimo imtis (25\% viso rinkinio)
     \item validavimo imtis (5\% viso rinkinio)
 \end{enumerate}
-Didžiausia, mokymo imtis yra naudojama modeklio apmokymui. Siekiant aptikti modelių persimokymą naudojama
+Didžiausia, mokymo imtis yra naudojama modelio apmokymui. Siekiant aptikti modelių persimokymą naudojama
 testavimo imtis. Modelį apmokius yra įvertinama jo kokybė naudojant parinktas metrikas, jei įverčiai stipriai
 skiriasi mokymosi ir testavimo imčiai modelis yra persimokęs, dėl to reikia koreguoti modelio hiperparametrus.
 Jei gauta modelio kokybė netenkina,  taip pat koreguojami hiperparametrai.
