--- a/docs/paper.tex
+++ b/docs/paper.tex
@@ -108,11 +108,11 @@ praktiniam panaudojimui. Taip pat trečioje dalyje kritiškai įvertinamas prakt
 
 \begin{enumerate}[label=\arabic*.]
 \item Apžvelgus literatūrą parinkti klasifikavimo modeliai ir pasiūlyta naudoti PageRank
- įverčius topologinei svetainių grafo informacijai panaudoti sąvybių vektoriaus formavime
+ įverčius topologinei svetainių grafo informacijai panaudoti savybių vektoriaus formavime
 \item Sukurta metodika kenksmingų tinklalapių klasifikavimui
 \item Įgyvendinta pasiūlyta metodologija sukuriant mašininio mokymo modelius bei sukurtas
  programinis įrankis praktiniam modelio panaudojimui
-\item Sukurtas įrankis naudotas su realiu duomenų rininiu, įvertinti įrankio trūkumai:
+\item Sukurtas įrankis naudotas su realiu duomenų rinkiniu, įvertinti įrankio trūkumai:
 lankstumo bei aiškumo trūkumas klasifikuojant tam tikrus populiarius tinklalapius ir privalumai.
 \end{enumerate}
 
