--- a/docs/taikymas/duomenys.tex
+++ b/docs/taikymas/duomenys.tex
@@ -68,5 +68,5 @@ tačiau tokios funkcijos vykdymo greitis yra apie 10 kartų lėtesnis. Tai šiuo
 
 Duomenims saugoti naudojami masyvai, nes naudojamas duomenų kiekis yra tam tinkamas. Iteravimas per
 įprastinius masyvus yra vykdomas žymiai greičiau nei naudojant kitas duomenų struktūras dėl geros
-procesoriaus optimizacijos naudojant spartinančiasias atmintines. Naudojant pasirinktą duomenų
+procesoriaus optimizacijos naudojant spartinančiąsias atmintines. Naudojant pasirinktą duomenų
 rinkinį suvartojama apie 5GB darbinės atminties.
