--- a/docs/taikymas/taikymas.tex
+++ b/docs/taikymas/taikymas.tex
@@ -30,7 +30,7 @@ Klasifikavimo aplikacija susideda iš dviejų pagrindinių komponentų:
 \end{enumerate}
 Sąsaja yra komponentas kurio funkcija yra pateikti branduolio suteikiamą funkcionalumą naudotojams. Šiuo atveju
 tai yra http protokolu veikianti sąsaja. Šis komponentas atsakingas už užklausos perdavimą branduolio komponentui,
-branduolio komponente esančio klasifikatoriaus rezultato pateikimui naudotojui tinklamu formatu. Programinio
+branduolio komponente esančio klasifikatoriaus rezultato pateikimui naudotojui tinkamu formatu. Programinio
 įrankio išeities kodas pateikiamas prieduose \vref{priedas:frontend}.
 
 Branduolio komponente vykdomas modelio pritaikymas. Jį sudaro klasė \texttt{ClassifierController} bei duomenų
@@ -49,7 +49,7 @@ Lyginant su alternatyvia sistema \cite{gapi} yra matomi klasifikavimo aplikacijo
  \end{enumerate}
 
 Pirminė programos versija yra kurta siekiant įrodyti jos veikimo koncepciją. Dėl to kai kurios sistemos vietos
-yra optimizuotos programavimo laiko minimizavimo atžvilgiu. Plėtojant programinę įrangą v ertėtų aplikaciją
+yra optimizuotos programavimo laiko minimizavimo atžvilgiu. Plėtojant programinę įrangą vertėtų aplikaciją
 skaidyti į kelis atskirtus komponentus, pagal naudojamų resursų tipą. PageRank įverčiai turi būti iškeliami
 į duomenų bazę, mašininio mokymo modelis iškeliamas į atskirą vykdomąją aplikaciją kuri gali būti plečiamas
 esant reikalui ar skaičiavimo resursų trūkumui.
