--- a/docs/metodas/vektoriai.tex
+++ b/docs/metodas/vektoriai.tex
@@ -1,4 +1,4 @@
-Atramos vektorių metodas naudojamas klasifikuoti daugelio matmenų vektorius į dvi klases \cite{comp}. Tai atliekama atskiriant objektus erdvėje naudojant tam tikrą hiperplokštumą. Tai vaizduojama \ktufigref{images/svm.png} paveiksle. Objektų erdvė yra transformuojama naudojant kernelio funkciją, kuri leidžia parinkti tokią erdvę kurioje klasių atskyrimas naudojant hiperplokštumą yra įmanomas.
+Atramos vektorių metodas naudojamas klasifikuoti daugelio matmenų vektorius į dvi klases \cite{comp}. Tai atliekama atskiriant objektus erdvėje naudojant tam tikrą hiperplokštumą. Tai vaizduojama \ktufigref{images/svm.png} paveiksle. Objektų erdvė yra transformuojama naudojant branduolio funkciją, kuri leidžia parinkti tokią erdvę kurioje klasių atskyrimas naudojant hiperplokštumą yra įmanomas.
 
 \ktufigure{images/svm.png}{8 cm}{Supaprastinta atramos vektorių mašinų metodo schema}.
 
@@ -6,7 +6,7 @@ Atramos vektorių mašinos modelis yra kaip \cite{comp}:
 \begin{equation}
     h(x) = b + \sum_{n=1}^{N}y_i \alpha_i K(x, x_i)
 \end{equation}
-kur $h(x)$ yra atstumas nuo hiperplokštumos skiriančios klases, $b$ yra papildomas svorio koeficientas, $y_i$ yra $i$-tojo mokymo rinkinio elemento klasė, o $x_i$ yra $i$-tasis mokymo imties elementas. $N$ yra mokymo imties elementų skaičius, $K$ yra naudojama kernelio funkcija kuri parinkta optimaliai erdvės transformacijai, $x$ yra klasifikuojamas objektas.
+kur $h(x)$ yra atstumas nuo hiperplokštumos skiriančios klases, $b$ yra papildomas svorio koeficientas, $y_i$ yra $i$-tojo mokymo rinkinio elemento klasė, o $x_i$ yra $i$-tasis mokymo imties elementas. $N$ yra mokymo imties elementų skaičius, $K$ yra naudojama branduolio funkcija kuri parinkta optimaliai erdvės transformacijai, $x$ yra klasifikuojamas objektas.
 
 Modelis yra formuojamas apibrėžiant \cite{ksvm}:
 \begin{equation}
@@ -25,26 +25,26 @@ ir sprendažitn atramos vektorių mašinų kvadratinio optimizavimo uždavinį:
 \end{equation}
 Kur C yra hiperparametras naudojamas modelio formavime. Naudojant mažas $C$ vertes galima pritaikyti modelį triukšmingiems pradiniams duomenims, o didelės vertės galimos kai visi mokymo duomenų rinkinio pavyzdžiai turi teisingas klases.
 
-Šio modelio naudojama kernelio funkcija gali būti laikoma vienu iš hiperparametrų kurie yra derinami modelio mokymo metu. Nagrinėjami trys kernelio tipai \cite{vw}:
+Šio modelio naudojama branduolio funkcija gali būti laikoma vienu iš hiperparametrų kurie yra derinami modelio mokymo metu. Nagrinėjami trys branduolio tipai \cite{vw}:
 \begin{enumerate}
     \item tiesinis
     \item polinominis
     \item radialinės bazės
 \end{enumerate}
 
-Tiesinis kernelio tipas yra naudojamas kai funkcija $K$ yra nenaudojama, tokiu atveju atramos vektorių mašinos yra apibrėžiamos kaip
+Tiesinis branduolio tipas yra naudojamas kai funkcija $K$ yra nenaudojama, tokiu atveju atramos vektorių mašinos yra apibrėžiamos kaip
 \begin{equation}
     W(\alpha) = \sum_{i}\alpha_i y_i - \frac{1}{2} \sum_{i, j} \alpha_i \alpha_j x_i x_j
 \end{equation}.
 Šis modelio variantas gali būti naudojamas kai objektai nagrinėjamoje erdvėje gali būti atskirti tiesia plokštumas, nėra reikalingos papildomos modifikacijos.
 
-Polinominis kernelis gali būti formuojamas naudojant \cite{vw}
+Polinominis branduolis gali būti formuojamas naudojant \cite{vw}
 \begin{equation}
     K(u, v) = (1 + u \cdot v)^d
 \end{equation}
-radialinės bazės kernelis išreiškiamas
+radialinės bazės branduolis išreiškiamas
 \begin{equation}
     K(u, v) = exp \big( - \frac{|| u - v ||^2}{2 \sigma ^ 2} \big)
 \end{equation}
 
-Šis modelis turi du derinamus hiperparametrus - tai yra konstanta $C$, bei parenkama kernelio funkcija. Kernelio funkcija taip pat prideda papildomus hiperparametrus. Polinominio kernelio atveju tai yra laipsnio parametras $d$, radialinės bazės kernelio atveju tai yra parametras $\sigma$
+Šis modelis turi du derinamus hiperparametrus - tai yra konstanta $C$, bei parenkama branduolio funkcija. Branduolio funkcija taip pat prideda papildomus hiperparametrus. Polinominio branduolio atveju tai yra laipsnio parametras $d$, radialinės bazės branduolio atveju tai yra parametras $\sigma$.
