--- a/docs/taikymas/bandymas.tex
+++ b/docs/taikymas/bandymas.tex
@@ -13,21 +13,20 @@ tinklalapių pateikiama lentelėje \vref{tab:bandymas}.
     Google paieškos variklis & https://google.com & Taip \\ \hline
     15 min laikraštis & https://15min.lt & Taip \\ \hline
     Šio darbo repozitorija & https://github.com/andriusdap/orb-weaver & Ne \\ \hline
-    Reddit tinklalapis & https://www.reddit.com/ & Taip \\ \hline
     \end{tabular}
 \end{ktutable}
 
-Toks įrankio bandymas parodo vieną iš jo trūkumų. Tokie tinkallapiai kaip Google, 15min tikrai nėra kenksmingi,
+Toks įrankio bandymas parodo vieną iš jo trūkumų. Tokie tinklalapiai kaip Google, 15min tikrai nėra kenksmingi,
 tačiau jie klasifikuojami netiesingai. Tą galima taisyti iš nauojo formuojant duomenų rinkinį mokymui,
 įtraukiant šiuos tinklalapius. Tačiau tai iškreipia mokymo metodiką.
 
 Šioje vietoje matomas pagrindinis įprasto juodojo sąrašo privalumas. Jo klasifikavimo modelio modifikavimas yra
-paprastas - užtenk atiesiog įterpti įrašą į duomenų bazę ir modelis yra atnaujintas. Taip pat visada yra aišku
+paprastas - užtenka tiesiog įterpti įrašą į duomenų bazę ir modelis yra atnaujintas. Taip pat visada yra aišku
 kodėl tinklalapis laikomas klaidingu, paprasta suprasti ką reikia keisti. Naudojant mašininio mokymo modelį tai
 gali būti atliekama peržiūrint modelio svorius, tačiau juos galima modifikuoti tik vykdant visą mokymo procesą iš naujo.
 
 Nors suformuotas modelis rodo tikrai gerus rezultatus su validavimo imtimis, tačiau praktinis panaudojimas nėra
 įmanomas. Tinklalapiai kurie klasifikuojami kaip blogi ar geri negali būti lengvai pakeisti esant blogam modelio
-klasifkavimui. Taip pat neina paaiškinti kodėl jie klasifikuojami kaip geri ar blogi. Tai gali būti keičiama
-įtraukiant papildomus matmenis į modelį - į juos turi įeiti turinio sąvybės bei tinklalapį talpinančio serverio
+klasifikavimui. Taip pat neina paaiškinti kodėl jie klasifikuojami kaip geri ar blogi. Tai gali būti keičiama
+įtraukiant papildomus matmenis į modelį - į juos turi įeiti turinio savybės bei tinklalapį talpinančio serverio
 informacija, topografinė struktūra.
