atramos vektorių metodas -> Atraminių vektorių klasifikatorius

--- a/docs/apzvalga/santrauka.tex
+++ b/docs/apzvalga/santrauka.tex
@@ -1,4 +1,4 @@
-Analizuojant egzistuojančią literatūrą aptikta, kad geri rezultatai klasifikuojant kenksmingas ir nekenksmingas svetaines yra pasiekiami naudojant įvairius metodus: C4.5 sprendimų medį \cite{trees}, atramos vektorių mašinų \cite{comp}. Šie metodai bus mėginami bandant išrinkti geriausiai tinkantį parinktam panaudos atvejui.
+Analizuojant egzistuojančią literatūrą aptikta, kad geri rezultatai klasifikuojant kenksmingas ir nekenksmingas svetaines yra pasiekiami naudojant du metodus: C4.5 sprendimų medį \cite{trees}, atraminių vektorių klasifikatorių \cite{comp}. Šie metodai bus mėginami bandant išrinkti geriausiai tinkantį parinktam panaudos atvejui.
 
 Duomenų rinkiniai yra formuojami jungiant įvairių juodųjų sąrašų duomenis bei naudojant privačius duomenų rinkinius kurie taip pat atitinka juoduosius sąrašus \cite{trees, comp, webcop}.
 
