--- a/docs/metodas/metodai.tex
+++ b/docs/metodas/metodai.tex
@@ -3,10 +3,10 @@
 Lyginami du klasifikavimo modeliai:
 \begin{enumerate}
 \item C4.5 sprendimų medis
-\item atramos vektorių mašinos
+\item atraminių vektorių klasifikatorius
 \end{enumerate}
 
 \ktusubsection{C4.5 sprendimų medžio klasifikatorius}
 \input{metodas/medis.tex}
-\ktusubsection{Atramos vektorių mašinų klasifikatorius}
+\ktusubsection{Atraminių vektorių klasifikatorius}
 \input{metodas/vektoriai.tex}
