--- a/docs/paper.tex
+++ b/docs/paper.tex
@@ -91,20 +91,20 @@ praktiniam panaudojimui. Taip pat trečioje dalyje kritiškai įvertinamas prakt
 
 \newpage
 
-\ktuchapter{Medžiagos ir tyrimų metodai}
+\ktuchapter{Tyrimų metodai}
 \input{metodas/input.tex}
 \input{metodas/metodai.tex}
 \input{metodas/mokymas.tex}
 \newpage
 
-\ktuchapter{Metodo taikymas ir rezultatai}
+\ktuchapter{Metodų taikymas ir rezultatai}
 
 \input{taikymas/duomenys.tex}
 \input{taikymas/mokymas.tex}
 \input{taikymas/taikymas.tex}
 \input{taikymas/bandymas.tex}
 
-\ktuchapter{Išvados}
+\ktunchapter{Išvados}
 
 \begin{enumerate}[label=\arabic*.]
 \item Apžvelgus literatūrą parinkti klasifikavimo modeliai ir pasiūlyta naudoti PageRank
