--- a/docs/apzvalga/comparison.tex
+++ b/docs/apzvalga/comparison.tex
@@ -1,7 +1,7 @@
 Straipsnyje lyginami įvairūs metodai skirti svetainių klasifikavimui į kenksmingas ir nekenksmingas. Formuluojama problema yra svetainių klasifikavimas į dvi grupes, naudojant metodus \cite{comp}
 \begin{enumerate}
  \item K-Artimiausų kaimynų (K-Nearest neighbours)
- \item Atramos vektorių mašinų (Support Vector Machine)
+ \item Atraminių vektorių klasifikatorius (Support Vector Machine)
  \item Paprastasis Bayes klasifikatorius (Naive Bayes)
  \item K-Vidurkių (K-Means)
  \item Affinity propagation metodas
@@ -21,15 +21,15 @@ Pagrindiniai šio metodo sunkumai yra $k$ dydžio parinkimas. Per didelis lems g
 
 Šio metodo privalumas yra tai,  kad skaičiavimai atliekami tingiai. Pirminio modelio formavimo metu nėra atliekami jokie skaičiavimai, jie vykdomi tik klasifikuojant naujus duomenis \cite{Wu2008}.
 
-Atramos vektorių mašinų (Support Vector Machine) metodas yra vienas iš patikimiausių klasifikavimo metodų \cite{Wu2008}. Jis pasižymi geru rezultatu net turint mažą kiekį mokymo duomenų bei nenukenčia dėl didelio matmenų kiekio \cite{Wu2008}. Šio metodo esmė yra duomenų atvaizdavimas kitoje erdvėje kurioje bus galima aptikti hiperplokštumą kuri skiria įrašų klases.
+Atraminių vektorių klasifikatoriaus (Support Vector Machine) metodas yra vienas iš patikimiausių klasifikavimo metodų \cite{Wu2008}. Jis pasižymi geru rezultatu net turint mažą kiekį mokymo duomenų bei nenukenčia dėl didelio matmenų kiekio \cite{Wu2008}. Šio metodo esmė yra duomenų atvaizdavimas kitoje erdvėje kurioje bus galima aptikti hiperplokštumą kuri skiria įrašų klases.
 
-Atramos vektorių mašinos modelis aprašomas kaip \cite{comp}:
+Atraminių vektorių klasifikatorius aprašomas\cite{comp}:
 \begin{equation}
-    h(x) = b + \sum_{n=1}^{N}y_i \alpha_i K(x, x_i)
+    h(x) = b + \sum_{n=1}^{N}y_i \alpha_i K(x, x_i),
 \end{equation}
-kur $h(x)$ yra elemento $x$ atstumas nuo klases skiriančios hiperplokštumos, $b$ yra papildomas svorio koeficientas, $\alpha$ yra hiperplokštumos paraštės korekcijos koeficientas mokymo imčiai, $N$ yra matmenų skaičius, $K$ yra branduolio funkcija kuri transformuoja elementus į atramos vektorių mašinos erdvę, $x$ yra klasifikuojamas įrašas.
+kur $h(x)$ yra elemento $x$ atstumas nuo klases skiriančios hiperplokštumos, $b$ yra papildomas svorio koeficientas, $\alpha$ yra hiperplokštumos paraštės korekcijos koeficientas mokymo imčiai, $N$ yra matmenų skaičius, $K$ yra branduolio funkcija kuri transformuoja elementus į atraminių vektorių erdvę, $x$ yra klasifikuojamas įrašas.
 
-Apmokant atramos vektorių mašinų modelį yra svarbu parinkti tinkamą branduolio funkciją, nuo jos itin priklauso modelio rezultatų tikslumas. Mokymas vykdomas parenkant branduolio funkciją ir pskaičiuojant tokius koeficientus $\alpha_i$ su kuriais gaunamas didžiausias riba tarp hiperplokštumos ir teisingai klasifikuotų mokymo duomenų erdvėje.
+Apmokant atraminių vektorių klasifikatorių yra svarbu parinkti tinkamą branduolio funkciją, nuo jos itin priklauso modelio rezultatų tikslumas. Mokymas vykdomas parenkant branduolio funkciją ir pskaičiuojant tokius koeficientus $\alpha_i$ su kuriais gaunamas didžiausias riba tarp hiperplokštumos ir teisingai klasifikuotų mokymo duomenų erdvėje.
 
 Šio metodo trūkumas yra didelio kiekio skaičiavimo resursų reikalavimas modelio apmokymo metu. Tačiau po modelio formavimo jis gali būti panaudojamas nereikalaujant daug resursų \cite{Wu2008}.
 
@@ -112,10 +112,10 @@ Modeliai apmokyti naudojant 70\% pradinių, sužymėtų duomenų apmokymui bei 3
         AUC                               & 0.66  &  0.93 & 0.91 & 0.88 \\ \hline
         kur modeliai: \\
         KNN - K-artimiausių kaimynų \\
-        LS - Tiesinės atramos vektorių mašinos \\
-        RS - Radial Basis Function atramos vektorių mašinos \\
+        LS - Tiesinio branduolio atraminių vektorių klasifikatorius \\
+        RS - Radial Basis Function branduolio atraminių vektorių klasifikatorius \\
         NB - Paprastasis Bayes klasifikatorius
     \end{tabular}
 \end{ktutable}
 
-Modelių rezultatai pateikiami \vref{tab:webtrees_rezultatas} lentelėje. Modelis pasiekęs geriausius rezultatus yra tiesinės atramos vektorių mašinos. Deja šiame straipsnyje nėra vertinami sprendimų medžiai, dėl to nėra aišku, koks būtų jų rezultatas naudojant šiuos duomenų ir savybių rinkinius.
+Modelių rezultatai pateikiami \vref{tab:webtrees_rezultatas} lentelėje. Modelis pasiekęs geriausius rezultatus yra tiesinio branduolio atraminių vektorių klasifikatorius. Deja šiame straipsnyje nėra vertinami sprendimų medžiai, dėl to nėra aišku, koks būtų jų rezultatas naudojant šiuos duomenų ir savybių rinkinius.
