--- a/docs/apzvalga/webtrees.tex
+++ b/docs/apzvalga/webtrees.tex
@@ -35,13 +35,13 @@ Siūloma alternatyva \cite{c45} yra dirbtinių neuronų tinklai, jie gali pasiek
 
 Klasifikavimui naudojamos leksikografinės svetainių adreso sąvybės bei serverio savybės. Naudojamos svetainės serverio savybės:
 \begin{enumerate}[label=\arabic*.]
-    \item Duomenų centro vieta
-    \item Domeno savininko kontaktinė informacija
-    \item Domeno registracijos data
-    \item Domeno informacijos atnaujinimo data
-    \item Svetainės spartinančiųjų atmintinių informacijos saugojimo laikas
-    \item Domeno valstybės kodas
-    \item Ryšio su serveriu pralaidumas
+    \item Duomenų centro vieta;
+    \item Domeno savininko kontaktinė informacija;
+    \item Domeno registracijos data;
+    \item Domeno informacijos atnaujinimo data;
+    \item Svetainės spartinančiųjų atmintinių informacijos saugojimo laikas;
+    \item Domeno valstybės kodas;
+    \item Ryšio su serveriu pralaidumas.
 \end{enumerate}
 
 Naudojamos leksikografinės savybės yra formuojamos iš svetainės universalaus adreso (URL). Jis yra dalinamas į segmentus, kuriuos skiria įvairūs simboliai bei skyrybos ženklai. Šie segmentai tampa dvireikšmėmis adreso savybėmis.
