--- a/docs/ktua4.sty
+++ b/docs/ktua4.sty
@@ -173,7 +173,7 @@
     \end{center}
   \end{figure}
 }
-\newcommand{\ktufigref}[1]{\ref{fig:#1}}
+\newcommand{\ktufigref}[1]{(\ref{fig:#1} pav.)}
 % filename, width, caption
 \newcommand{\ktufigure}[3]{
   \begin{figure}[H]
