--- a/docs/metodas/medis.tex
+++ b/docs/metodas/medis.tex
@@ -2,7 +2,7 @@ C4.5 sprendimų medis yra sprendimų medžio tipo klasifikatorius kurio formavim
 Sprendimų medis yra programa, suformuota iš tam tikrų testų, kurie tikrina nagrinėjamo objekto parametrus,
 ir pagal juos parenkama tam tikra klasė.
 
-\ktufigure{images/sprendimu_medis.png}{8 cm}{Pavyzdinis sprendimų medis}
+\ktufigure{images/sprendimu_medis.png}{8 cm}{Sprendimų medžio pavyzdys}
 
 Pavyzdinis sprendimų medis klasifikuojantis vektorių $X$ į klases $Y = (y_1, y_2, y_3)$ pateikiamas
  \ktufigref{images/sprendimu_medis.png} paveiksle. Jį sudaro testų rinkinys $T$.
