--- a/docs/metodas/metodai.tex
+++ b/docs/metodas/metodai.tex
@@ -1,12 +1,12 @@
-\ktusection{Klasifikavimo modeliai}
+\ktusection{Kenksmingų interneto tinklalapių identifikavimo modelis}
 
 Lyginami du klasifikavimo modeliai:
 \begin{enumerate}
-\item C4.5 sprendimų medis
-\item atraminių vektorių klasifikatorius
+\item C4.5 sprendimų medžio modelis;
+\item atraminių vektorių modelis.
 \end{enumerate}
 
-\ktusubsection{C4.5 sprendimų medžio klasifikatorius}
+\ktusubsection{C4.5 sprendimų medžio modelis}
 \input{metodas/medis.tex}
-\ktusubsection{Atraminių vektorių klasifikatorius}
+\ktusubsection{Atraminių vektorių modelis}
 \input{metodas/vektoriai.tex}
