--- a/docs/metodas/mokymas.tex
+++ b/docs/metodas/mokymas.tex
@@ -1,13 +1,13 @@
-\ktusection{Modelių sudarymas}
+\ktusection{Kenksmingų interneto tinklalapių identifikavimo modelio apmokymas}
 
 Supaprastinta modelio schema yra pateikiama \ktufigref{images/mokymas.png} paveiksle.
 \ktufigure{images/mokymas.png}{13 cm}{Modelio formavimo schema}
 
 Modeliams mokyti naudojamas duomenų rinkinys yra dalinamas į tris imtis:
 \begin{enumerate}
-    \item mokymo imtis (70\% viso rinkinio)
-    \item testavimo imtis (25\% viso rinkinio)
-    \item validavimo imtis (5\% viso rinkinio)
+    \item mokymo imtis (70\% viso rinkinio);
+    \item testavimo imtis (25\% viso rinkinio);
+    \item validavimo imtis (5\% viso rinkinio).
 \end{enumerate}
 Didžiausia, mokymo imtis yra naudojama modelio apmokymui. Siekiant aptikti modelių persimokymą naudojama
 testavimo imtis. Modelį apmokius yra įvertinama jo kokybė naudojant parinktas metrikas, jei įverčiai stipriai
