--- a/docs/metodas/vektoriai.tex
+++ b/docs/metodas/vektoriai.tex
@@ -27,9 +27,9 @@ Kur C yra hiperparametras naudojamas modelio formavime. Naudojant mažas $C$ ver
 
 Šio modelio naudojama branduolio funkcija gali būti laikoma vienu iš hiperparametrų kurie yra derinami modelio mokymo metu. Nagrinėjami trys branduolio tipai \cite{vw}:
 \begin{enumerate}
-    \item tiesinis
-    \item polinominis
-    \item radialinės bazės
+    \item tiesinis,
+    \item polinominis,
+    \item radialinės bazės.
 \end{enumerate}
 
 Tiesinis branduolio tipas yra naudojamas kai funkcija $K$ yra nenaudojama, tokiu atveju atraminių vektorių klasifikatorius yra apibrėžiamos kaip
