--- a/docs/paper.tex
+++ b/docs/paper.tex
@@ -75,7 +75,7 @@ tinklalapius.
 Pirmoje darbo dalyje yra pateikiama klasifikavimo metodų bei kenksmingų tinklalapių tyrinėjimo literatūros apžvalga.
 Antroje dalyje pateikiama metodika kenksmingų ir nekenksmingų tinklalapių klasifikavimui, suformuojant mašininio
 mokymo modelius. Trečiojoje dalyje yra aprašomas ir apmokomas modelis, pateikiama programinė įranga šio modelio
-praktiniam panaudojimui. Taip pat trečioje dalyje kritiškai įvertinamas praktinis įrankio panaudojimas.
+praktiniam panaudojimui. Kritiškai įvertinamas praktinis įrankio panaudojimas. Apžvelgiamos geros
 
 \newpage
 
@@ -108,10 +108,10 @@ praktiniam panaudojimui. Taip pat trečioje dalyje kritiškai įvertinamas prakt
 
 \begin{enumerate}[label=\arabic*.]
 \item Apžvelgus literatūrą parinkti klasifikavimo modeliai ir pasiūlyta naudoti PageRank
- įverčius topologinei svetainių grafo informacijai panaudoti savybių vektoriaus formavime
-\item Sukurta metodika kenksmingų tinklalapių klasifikavimui
+ įverčius topologinei svetainių grafo informacijai panaudoti savybių vektoriaus formavime;
+\item Sukurta metodika kenksmingų tinklalapių klasifikavimui;
 \item Įgyvendinta pasiūlyta metodologija sukuriant mašininio mokymo modelius bei sukurtas
- programinis įrankis praktiniam modelio panaudojimui
+ programinis įrankis praktiniam modelio panaudojimui;
 \item Sukurtas įrankis naudotas su realiu duomenų rinkiniu, įvertinti įrankio trūkumai:
 lankstumo bei aiškumo trūkumas klasifikuojant tam tikrus populiarius tinklalapius ir privalumai.
 \end{enumerate}
