--- a/docs/taikymas/taikymas.tex
+++ b/docs/taikymas/taikymas.tex
@@ -19,14 +19,14 @@ Aplikacija pritaikyta naudoti http protokolu, naudojama REST architektūra. Sąs
 lentelėje. Tinklalpio kurį norima klasifikuoti adresas yra pateikiamas klasifikavimo aplikacijai, grąžinamas
 rezultatas yra klasifikavimo modelio pateiktas įvertis.
 
-Klasifikavimo aplikacijos architektūra pateikiama paveiksle \ktufigref{images/architektura.png}
+Kenksmingų interneto tinklalapių identifikavimo programos architektūra pateikiama paveiksle \ktufigref{images/architektura.png}
 
-\ktufigure{images/architektura.png}{12 cm}{Klasifikavimo aplikacijos architektūra}
+\ktufigure{images/architektura.png}{12 cm}{Kenksmingų interneto tinklalapių identifikavimo programos architektūra}
 
 Klasifikavimo aplikacija susideda iš dviejų pagrindinių komponentų:
 \begin{enumerate}
-\item sąsaja
-\item branduolys
+\item sąsaja,
+\item branduolys.
 \end{enumerate}
 Sąsaja yra komponentas kurio funkcija yra pateikti branduolio suteikiamą funkcionalumą naudotojams. Šiuo atveju
 tai yra http protokolu veikianti sąsaja. Šis komponentas atsakingas už užklausos perdavimą branduolio komponentui,
