--- a/docs/metodas/input.tex
+++ b/docs/metodas/input.tex
@@ -52,7 +52,7 @@ Išskiriamos sąvybės iš tinklalapio adreso yra:
 Žodžiai adrese yra išskiriami kaip dviejų reikšmių sąvybės, $0$ jei žodis neegzistuoja adrese, $1$ jei žodis yra adrese. Laikoma, kad žodžius skiria specialieji simboliai.
 
 Pagerank įverčiai gaunami iš orientuoto svetainių grafo $G = (V, E)$, kur $V$ yra šio grafo viršūnės o $E$ lankai. Grafo formavimas iš interneto svetainių yra pavaizduotas \ktufigref{images/hostgraph.png} paveiksle.
-\ktufigure{images/hostgraph.png}{15 cm}{Svetainių grafo formavimas iš svetainių}
+\ktufigure{images/hostgraph.png}{15 cm}{Svetainių grafo formavimas}
 
 Grafo viršūnės $V$ yra svetainės, o lankai atitinka ryšius tarp svetainių. Tai yra nuorodos tarp svetainių aptinkamos svetainių tinklalapiuose. Šie lankai turi kryptį. Jei svetainės $v_a$ tinklalapyje yra nuoroda į svetainės $v_b$ tinklalapį laikoma, kad egzistuoja lankas $e_{ab}$ iš viršūnės $v_a$ į viršūnę $v_b$. Visų lankų svoris yra vienodas, tai yra jei keli svetainės $v_a$ tinklalapiai turi nuorodas į svetainės $v_b$ tinklalapius, vis vien laikoma kad yra tik vienas lankas $e_{ab}$. Galimi abipusiai svetainių ryšiai, tai yra jei egzistuoja lankas $e_{ab}$ lankas $e_{ba}$, kuris rodo ryšį iš viršūnės $v_b$ į viršūnę $v_a$ taip pat gali egzistuoti.
 
