--- a/docs/taikymas/mokymas.tex
+++ b/docs/taikymas/mokymas.tex
@@ -45,7 +45,7 @@ Modelio kokybė mokymo metu negerėja. Tai atspindi šių parametrų nuostolio f
 \ktufigref{images/svm_sux.png}. Naudojant parametrų rinkinius iš lentelės \vref{tab:initial_train}
 modelis nekonverguoja.
 
-\ktufigure{images/svm_sux.png}{14 cm}{Modelio kokybės tendencijos}
+\ktufigure{images/svm_sux.png}{14 cm}{Klasifikatoriaus nuostolių priklausomybė nuo mokymo duomenų kiekio}
 
 Modelio mokymas toliau tyrinėtas naudojant kitas branduolio funkcijas ir derinant jų parametrus.
 Modelio parametrų reguliarizacijos parametras L2 nekeistas.
@@ -110,7 +110,7 @@ atraminių vektorių klasifikatorių, kuris šiame straipsnyje buvo išskiriamas
 
 \ktusubsection{Sprendimų medžio modelio formavimas}
 
-\ktufigure{images/treeLoss.png}{12 cm}{Sprendimų medžio modelio nuostolio funkcija}
+\ktufigure{images/treeLoss.png}{12 cm}{Sprendimų medžio modelio nuostolių funkcija}
 
 Paskutinis naudojamas modelis yra sprendimų medis. Modelio naudojami parametrai pateikiami lentelėje \vref{tab:medisParams}.
 
